# retraining

./: README.md  pyproject.toml  serializers.py
author/: admin.py  models.py  views.py
author/api/: serializers.py  viewset.py
author/migrations/: 0001_initial.py  0002_alter_author_options_alter_author_media.py
book/: admin.py  models.py  views.py
book/api/: serializers.py  viewset.py
book/migrations/: 0001_initial.py  0002_alter_book_options_book_available_copies.py
config/: settings.py  urls.py
reader/: admin.py  models.py  validators.py  views.py
reader/api/: serializers.py  viewset.py
reader/migrations/: 0001_initial.py
tools/permissions/: permissions.py
tools/same/: __init__.py  datetime_same.py
